<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/history_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/history_btn"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg" />

        <Button
            android:id="@+id/restock_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/restock_btn"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg" />

        <Button
            android:id="@+id/manager_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/cancel_btn"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>