<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/product_list_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/product_type"
        android:textColor="@color/dark_teal"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_product_item_middle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline_product_item_right"
        app:layout_constraintStart_toStartOf="@id/guideline_product_item_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_list_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/selected_quantity"
        android:textColor="@color/light_teal"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_product_item_middle"
        app:layout_constraintLeft_toLeftOf="@id/guideline_product_item_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_product_item_right"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_list_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/light_teal"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_product_item_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline_product_item_right"
        app:layout_constraintStart_toStartOf="@id/guideline_product_item_left"
        app:layout_constraintTop_toTopOf="@id/guideline_product_item_middle" />

    <View
        android:id="@+id/product_list_item_divider"
        android:layout_width="match_parent"
        android:layout_height= "2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/light_teal"
        app:layout_constraintTop_toBottomOf="@id/guideline_product_item_bottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_product_item_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_product_item_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_product_item_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_product_item_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>